# muslink

./: .gitignore  Cargo.toml  Dockerfile
.github/workflows/: docker.yml
apps/backend/: Cargo.toml
apps/backend/src/: main.rs  models.rs  resolver.rs  service.rs  utils.rs
apps/background-worker/: Cargo.toml  Dockerfile
apps/background-worker/src/: functions.rs  main.rs  rating_prompt.txt
apps/graphql-api/: Cargo.toml  Dockerfile
apps/graphql-api/src/: main.rs  models.rs  resolver.rs  service.rs
apps/telegram-bot/: Cargo.toml  Dockerfile  build.rs
apps/telegram-bot/src/: functions.rs  main.rs  services.rs
apps/telegram-bot/src/entities/: telegram_bot_channel.rs  telegram_bot_user.rs
apps/telegram-bot/src/migrations/: m20250512_create_telegram_bot_channel.rs  m20250513_create_telegram_bot_user.rs  mod.rs
libs/entities/: Cargo.toml
libs/entities/src/: lib.rs  music_link.rs  prelude.rs  telegram_bot_channel.rs  telegram_bot_music_share.rs  telegram_bot_music_share_reaction.rs  telegram_bot_user.rs
libs/graphql/queries/: resolve_music_link.graphql
libs/migrations/: Cargo.toml
libs/migrations/src/: lib.rs  m20250512_create_telegram_bot_channel.rs  m20250513_create_telegram_bot_user.rs  m20250514_create_music_link.rs  m20250515_create_telegram_bot_music_share.rs  m20250516_create_telegram_bot_music_share_reaction.rs  m20250517_add_llm_sentiment_analysis_column_to_telegram_bot_music_share_reaction.rs  m20250518_add_last_interacted_at_columns.rs
libs/service/: Cargo.toml
libs/service/src/: lib.rs  models.rs  utils.rs
libs/services/: Cargo.toml
libs/services/src/: lib.rs  models.rs
migrations/: Cargo.toml
migrations/src/: m20250511_create_extensions.rs
src/: main.rs  models.rs  resolver.rs  service.rs  utils.rs
