[workspace]
resolver = "2"
members = [
  "libs/entities",
  "libs/migrations",
  "libs/services",
  "apps/background-worker",
  "apps/graphql-api",
  "apps/telegram-bot",
]

[workspace.dependencies]
anyhow = "=1.0.100"
apalis = { version = "=0.7.4", features = ["catch-panic", "retry"] }
apalis-cron = "=0.7.4"
async-graphql = "=7.2.1"
async-graphql-axum = "=7.2.1"
axum = "=0.8.8"
chrono = "=0.4.43"
convert_case = "=0.10.0"
dotenvy = "=0.15.7"
dptree = "=0.5.1"
graphql_client = "=0.16.0"
nest_struct = "=0.5.5"
openai-api-rs = { version = "=9.0.1", default-features = false, features = [
  "rustls",
] }
regex = "=1.12.2"
reqwest = { version = "=0.13.1", default-features = false, features = [
  "json",
  "stream",
  "rustls",
] }
rust_iso3166 = "=0.1.14"
schematic = { version = "=0.19.4", features = [
  "config",
  "env",
  "validate",
], default-features = false }
sea-orm = { version = "=1.1.19", features = [
  "sqlx-postgres",
  "runtime-tokio-rustls",
  "with-json",
  "with-time",
] }
sea-orm-migration = "=1.1.19"
serde = "=1.0.228"
serde_json = "=1.0.149"
strum = { version = "=0.27.2", features = ["derive"] }
teloxide = { version = "=0.17.0", default-features = false, features = [
  "ctrlc_handler",
  "rustls",
] }
tokio = { version = "=1.49.0", features = ["full"] }
tracing = "=0.1.44"
tracing-subscriber = { version = "=0.3.22", features = ["env-filter"] }
uuid = "=1.20.0"
