[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
async-graphql = { workspace = true }
async-graphql-axum = { workspace = true }
axum = { workspace = true }
nest_struct = { workspace = true }
reqwest = { workspace = true }
rust_iso3166 = { workspace = true }
serde = { workspace = true }
strum = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
