[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
async-graphql = { workspace = true }
async-graphql-axum = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
service = { path = "../../libs/service" }
strum = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
