[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
async-graphql = { workspace = true }
async-graphql-axum = { workspace = true }
axum = { workspace = true }
migrations = { path = "../../libs/migrations" }
schematic = { workspace = true }
sea-orm = { workspace = true }
serde = { workspace = true }
services = { path = "../../libs/services" }
strum = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
