[package]
name = "background-worker"
version = "0.1.0"
edition = "2024"

[dependencies]
apalis = { workspace = true }
apalis-cron = { workspace = true }
chrono = { workspace = true }
dotenvy = { workspace = true }
migrations = { path = "../../libs/migrations" }
schematic = { workspace = true }
serde = { workspace = true }
sea-orm = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
