[package]
name = "background-worker"
version = "0.1.0"
edition = "2024"

[dependencies]
apalis = { workspace = true }
apalis-cron = { workspace = true }
chrono = { workspace = true }
dotenvy = { workspace = true }
entities = { path = "../../libs/entities" }
migrations = { path = "../../libs/migrations" }
openai-api-rs = { workspace = true }
schematic = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sea-orm = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
