[package]
name = "telegram-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
convert_case = { workspace = true }
dotenvy = { workspace = true }
dptree = { workspace = true }
regex = { workspace = true }
schematic = { workspace = true }
service = { path = "../../libs/service" }
serde = { workspace = true }
teloxide = { workspace = true }
tokio = { workspace = true }
