[package]
name = "telegram-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
convert_case = { workspace = true }
dotenvy = { workspace = true }
dptree = { workspace = true }
entities = { path = "../../libs/entities" }
migrations = { path = "../../libs/migrations" }
regex = { workspace = true }
schematic = { workspace = true }
sea-orm = { workspace = true }
sea-orm-migration = { workspace = true }
services = { path = "../../libs/services" }
serde = { workspace = true }
teloxide = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
