[package]
name = "services"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
entities = { path = "../entities" }
chrono = { workspace = true }
nest_struct = { workspace = true }
reqwest = { workspace = true }
rust_iso3166 = { workspace = true }
sea-orm = { workspace = true }
serde = { workspace = true }
strum = { workspace = true }
tracing = { workspace = true }
